--- a/SQL Alchemy Homework.ipynb
+++ b/SQL Alchemy Homework.ipynb
@@ -33,18 +33,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Reflect Tables into SQLAlchemy ORM"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Query to show how many stations are available in this dataset\n",
     "# Python SQL toolkit and Object Relational Mapper\n",
     "import sqlalchemy\n",
     "from sqlalchemy.ext.automap import automap_base\n",
@@ -1946,13 +1940,6 @@
     "trip_rainfall\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
